[package]
name = "liber-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["derive/inherit-macros-derive", "derive/inherit-macros-core"]

[dependencies]
inherit-macros-derive = { version = "0.1.0", path = "derive/inherit-macros-derive" }
cstr = "0.2.12"
widestring = "1.1.0"

[build-dependencies]
autocxx-build = "0.26.0"
